# PT31

./: .gitignore  PT31.sln  README.MD  directionized_pathfinder.cxx
EfficientPathFinder/: Debugging on Linux From Windows.txt  DynamicGrid.cxx  DynamicGrid.hxx  EfficientPathFinder.sln  EfficientPathFinder.vcxproj  EfficientPathFinder.vcxproj.filters  Makefile  MazeMap.cxx  MazeMap.hxx  main.cxx
EfficientPathFinder/test/: main.cxx
ev3dev-cpp/: .gitignore  BUILD.BAT  CLEAN.BAT  CYGWIN.BAT  Makefile  README.txt  REBUILD.BAT  design.uml  ev3dev.sln  ev3dev.vcxproj  ev3dev.vcxproj.filters  path_processor_DBG_native.bin.stackdump  server_DBG_native.bin.stackdump
ev3dev-cpp/build-tmd-gui-Desktop_Qt_5_5_1_GCC_64bit-Debug/: Makefile  moc_MainWindow.cpp  qrc_qml.cpp  tmd-gui
ev3dev-cpp/common/DynamicGrid/: DynamicGrid.cxx  DynamicGrid.hxx
ev3dev-cpp/common/interfaces/: ICalibration.hxx  IDriveControl.hxx  IGripControl.hxx  ILocation.hxx  IMecanumControl.hxx  IRobot.hxx  ISensing.hxx
ev3dev-cpp/common/interprocess_queue/: IPCQueue.hxx  QueueItem.hxx  RawQueue.hxx
ev3dev-cpp/path_processor/: component_description.txt  main.cxx
ev3dev-cpp/path_processor/lib/: DynamicGrid.cxx  DynamicGrid.hxx  Environment.hxx  StringSplitter.cxx
ev3dev-cpp/pix_location/: .gitignore  CMakeLists.txt  PixyLocationProvider.cxx
ev3dev-cpp/pix_location/include/: LocationProvider.hxx  PixyLocationProvider.hxx
ev3dev-cpp/project/: main.cxx
ev3dev-cpp/server/: .gitignore  CMakeLists.txt  main.cxx
ev3dev-cpp/server/src/: UWBLocationProvider.cxx  UWBLocationProvider.hxx
ev3dev-cpp/tmd/: CMakeLists.txt  tmd.pro
ev3dev-cpp/tmd-gui/: .gitignore  MainWindow.qml  deployment.pri  main.cpp
ev3dev-cpp/tmd/cmake/: CMakeLists.txt  rpi.cmake
ev3dev-cpp/tmd/src/: PixyLocationProvider.cxx
maze_sys/: BUILD.BAT  Makefile  PT31.vcxproj  PT31.vcxproj.filters  REBUILD.BAT
maze_sys/common/: component_description.txt
maze_sys/common/DynamicGrid/: DynamicGrid.cxx  DynamicGrid.hxx
maze_sys/common/Environment/: Environment.cxx
maze_sys/common/LocationProvider/: LocationProvider.cpp  LocationProvider.h  ipcpos.h
maze_sys/common/StringSplitter/: StringSplitter.hxx
maze_sys/common/interfaces/: ICalibration.hxx  IComponentAvailability.hxx  IDriveControl.hxx  (+5 more)
maze_sys/main_ev3_application/: component_description.txt  main.cxx  main.cxx.bak
maze_sys/main_server_application/: NetworkServer.cxx  NetworkServer.hxx  Robot.cxx  Robot.hxx  component_description.txt  main.cxx  queue_push_pop_example.cxx
maze_sys/path_processor/: main.cxx
maze_sys/pix_location/: component_description.txt  ipcpos.cpp  ipcpos.h  main.cpp  pix_location.pro  pixylocationprovider.cpp  pixylocationprovider.h  thread.cpp  thread.h
maze_sys/test/: component_description.txt
maze_sys/tmd/: .gitignore
maze_sys/tmd-gui/: MainWindow.cpp  MainWindow.h  MainWindow.qml  main.cpp  tmd-gui.pro
maze_sys/uwb_location/: component_description.txt  uwb_location.pro  uwblocationprovider.cpp  uwblocationprovider.h
non_code/: maze_sys_robot_simplified.uml
win_debug/: main.cxx  win_debug.vcxproj
(+73 files in other folders)
